achived the desired format